# redbyte-security-arsenal

./: .gitignore  CMakeLists.txt  README.md
experiments/: README.md  patcher.c
include/: ui.h
libs/hash_table/: CMakeLists.txt  hash_table.c  hash_table.h
libs/hash_table/tests/: CMakeLists.txt  test_hash_table.c
macho-analyzer/: CMakeLists.txt  README.md
macho-analyzer/include/: hash_table.h  language_detector.h  lc_commands.h  macho_analyzer.h  macho_printer.h  security_analyzer.h  security_check.h
macho-analyzer/src/: hash_table.c  language_detector.c  lc_commands.c  macho_analyzer.c  macho_printer.c  security_analyzer.c  security_check.c
src/: main.c  ui.c
tests/: CMakeLists.txt  hash_table_tests.c  macho_analyzer_tests.c
